--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
         .player-tag { color: var(--highlight); margin-right: 12px; border-bottom: 1px solid; font-size: 1.2rem; }
         .status-dot { height: 12px; width: 12px; border-radius: 50%; display: inline-block; margin-right: 5px; background: #555; }
         .online { background: #4CAF50; box-shadow: 0 0 8px #4CAF50; }
-        
-        /* Name Modal */
-        #nameOverlay { position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); z-index: 100; display: flex; flex-direction: column; justify-content: center; align-items: center; visibility: hidden; }
-        #nameOverlay.show { visibility: visible; }
+        #nameOverlay { position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.95); z-index: 100; display: none; flex-direction: column; justify-content: center; align-items: center; }
+        #nameOverlay.show { display: flex; }
     </style>
 </head>
 <body>
     <div class="container">
         <div id="nameOverlay">
             <h2 style="color:var(--gold)">WHO ART THOU?</h2>
-            <input type="text" id="nIn" placeholder="Character Name" style="background:#000; border:2px solid var(--gold); color:#fff; font-family:'VT323'; font-size: 1.5rem; padding: 10px; margin-bottom: 10px;">
+            <input type="text" id="nIn" placeholder="Character Name" maxlength="15" style="background:#000; border:2px solid var(--gold); color:#fff; font-family:'VT323'; font-size: 1.5rem; padding: 10px; margin-bottom: 10px; text-align: center;">
             <button onclick="saveName()" style="font-size: 1.5rem;">ENTER DUNGEON</button>
         </div>
 
@@ -47,7 +45,7 @@
             <div>
                 <span id="syncDot" class="status-dot"></span>
                 <span id="roomDisp" style="color:#8a7a6a">Room: ...</span>
-                <button onclick="navigator.clipboard.writeText(window.location.href); alert('Copied!')">Copy Link</button>
+                <button onclick="navigator.clipboard.writeText(window.location.href); alert('Link copied!')">Copy Link</button>
             </div>
             <div style="display:flex; gap: 5px;">
                 <button onclick="localStorage.removeItem('barony_user'); location.reload();" style="opacity: 0.6;">Change Name</button>
@@ -96,7 +94,8 @@
                     sel.appendChild(opt);
                 });
                 sel.onchange = async () => {
-                    await client.from('scrolls').upsert({ room_id: roomId, scroll_name: name, effect: sel.value }, { onConflict: 'room_id,scroll_name' });
+                    const { error } = await client.from('scrolls').upsert({ room_id: roomId, scroll_name: name, effect: sel.value }, { onConflict: 'room_id,scroll_name' });
+                    if(error) console.error("Update failed:", error.message);
                 };
             });
         }
@@ -127,7 +126,8 @@
             document.getElementById('counter').innerText = `Discovered: ${disc} / 24`;
         }
 
-        client.channel('realtime-sync')
+        // Realtime Subscription
+        client.channel('table-db-changes')
             .on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, p => {
                 if (p.new && p.new.room_id === roomId) apply(p.new.scroll_name, p.new.effect);
                 if (p.eventType === 'DELETE') location.reload();
@@ -141,11 +141,12 @@
             });
 
         async function refresh() {
-            const { data } = await client.from('players').select('*').eq('room_id', roomId);
-            if(!data) return;
+            const { data, error } = await client.from('players').select('*').eq('room_id', roomId);
+            if(error) { console.error("Refresh error:", error.message); return; }
             const list = document.getElementById('playerList');
             list.innerHTML = "In Dungeon: ";
-            data.filter(p => (new Date() - new Date(p.last_seen)) < 15000).forEach(p => {
+            const now = new Date();
+            data.filter(p => (now - new Date(p.last_seen)) < 15000).forEach(p => {
                 list.innerHTML += `<span class="player-tag">${p.name}</span> `;
             });
         }
@@ -158,11 +159,17 @@
 
         setInterval(async () => {
             if(charName) {
-                await client.from('players').upsert({ room_id: roomId, name: charName, last_seen: new Date().toISOString() }, { onConflict: 'room_id,name' });
+                const { error } = await client.from('players').upsert({ room_id: roomId, name: charName, last_seen: new Date().toISOString() }, { onConflict: 'room_id,name' });
+                if(!document.getElementById('syncDot').classList.contains('online')) refresh();
             }
         }, 5000);
 
-        async function resetRun() { if(confirm("Reset all?")) await client.from('scrolls').delete().eq('room_id', roomId); }
+        async function resetRun() { 
+            if(confirm("Reset all?")) {
+                await client.from('scrolls').delete().eq('room_id', roomId);
+                location.reload();
+            }
+        }
 
         init();
     </script>
