--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barony Scroll Tracker - Final Sync</title>
+    <title>Barony Scroll Tracker - Repair Mode</title>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@@ -11,15 +11,11 @@
         body { background: var(--bg); color: var(--text); font-family: 'VT323', monospace; padding: 10px; display: flex; justify-content: center; margin: 0; }
         .container { width: 100%; max-width: 950px; border: 4px solid var(--gold); background: var(--panel); box-shadow: 0 0 20px #000; position: relative; }
         header { padding: 15px; border-bottom: 4px solid var(--gold); background: #1a120b; }
+        #debug-log { background: #420000; color: #ff6666; padding: 10px; font-size: 0.9rem; display: none; border-bottom: 2px solid var(--danger); }
         .scroll-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); background: #000; }
         .item { display: flex; justify-content: space-between; align-items: center; padding: 10px 15px; border: 1px solid #33241a; }
-        .item:nth-child(even) { background: #1e150f; }
-        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.2rem; width: 160px; cursor: pointer; }
-        select.identified { border-color: #4CAF50; color: #fff; box-shadow: 0 0 5px #4CAF50; }
-        .controls { padding: 15px; display: flex; flex-wrap: wrap; gap: 10px; justify-content: space-between; align-items: center; background: #1a120b; border-top: 2px solid var(--gold); }
-        button { background: #3d2b1f; color: #fff; border: 2px solid var(--gold); cursor: pointer; font-family: 'VT323'; padding: 6px 12px; font-size: 1rem; }
-        .player-tag { color: var(--highlight); margin-right: 12px; border-bottom: 1px solid; font-size: 1.2rem; }
-        .status-dot { height: 12px; width: 12px; border-radius: 50%; display: inline-block; margin-right: 5px; background: #555; }
+        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.2rem; width: 160px; }
+        .status-dot { height: 12px; width: 12px; border-radius: 50%; display: inline-block; background: #555; }
         .online { background: #4CAF50; box-shadow: 0 0 8px #4CAF50; }
         #nameOverlay { position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.95); z-index: 100; display: none; flex-direction: column; justify-content: center; align-items: center; }
         #nameOverlay.show { display: flex; }
@@ -27,30 +23,26 @@
 </head>
 <body>
     <div class="container">
+        <div id="debug-log"></div>
         <div id="nameOverlay">
             <h2 style="color:var(--gold)">WHO ART THOU?</h2>
-            <input type="text" id="nIn" placeholder="Character Name" maxlength="15" style="background:#000; border:2px solid var(--gold); color:#fff; font-family:'VT323'; font-size: 1.5rem; padding: 10px; margin-bottom: 10px; text-align: center;">
-            <button onclick="saveName()" style="font-size: 1.5rem;">ENTER DUNGEON</button>
+            <input type="text" id="nIn" placeholder="Character Name" style="background:#000; border:2px solid var(--gold); color:#fff; font-family:'VT323'; font-size: 1.5rem; padding: 10px; margin-bottom: 10px;">
+            <button onclick="saveName()">ENTER DUNGEON</button>
         </div>
-
         <header>
             <div style="display:flex; justify-content:space-between; align-items: center;">
                 <h1 style="margin:0">📜 BARONY SCROLLS</h1>
                 <div id="counter" style="color: #4CAF50; font-size: 1.6rem;">Discovered: 0 / 24</div>
             </div>
-            <div id="playerList" style="margin-top:10px; color:#8a7a6a; min-height: 1.2rem;">In Dungeon: </div>
+            <div id="playerList" style="margin-top:10px; color:#8a7a6a;">In Dungeon: </div>
         </header>
         <div id="grid" class="scroll-grid"></div>
-        <div class="controls">
+        <div class="controls" style="padding:15px; display:flex; justify-content:space-between; background:#1a120b;">
             <div>
                 <span id="syncDot" class="status-dot"></span>
                 <span id="roomDisp" style="color:#8a7a6a">Room: ...</span>
-                <button onclick="navigator.clipboard.writeText(window.location.href); alert('Link copied!')">Copy Link</button>
             </div>
-            <div style="display:flex; gap: 5px;">
-                <button onclick="localStorage.removeItem('barony_user'); location.reload();" style="opacity: 0.6;">Change Name</button>
-                <button style="background:var(--danger); border-color: #ff4d4d;" onclick="resetRun()">RESET ALL</button>
-            </div>
+            <button onclick="localStorage.removeItem('barony_user'); location.reload();">Change Name</button>
         </div>
     </div>
 
@@ -70,15 +62,16 @@
         let charName = localStorage.getItem('barony_user');
         if(!charName) document.getElementById('nameOverlay').classList.add('show');
 
-        function saveName() {
-            const val = document.getElementById('nIn').value.trim();
-            if(val) {
-                localStorage.setItem('barony_user', val);
-                location.reload();
-            }
+        function logError(msg) {
+            const el = document.getElementById('debug-log');
+            el.style.display = 'block';
+            el.innerText = "Error: " + msg;
         }
 
-        let selections = {};
+        function saveName() {
+            const val = document.getElementById('nIn').value.trim();
+            if(val) { localStorage.setItem('barony_user', val); location.reload(); }
+        }
 
         function init() {
             const grid = document.getElementById('grid');
@@ -95,83 +88,41 @@
                 });
                 sel.onchange = async () => {
                     const { error } = await client.from('scrolls').upsert({ room_id: roomId, scroll_name: name, effect: sel.value }, { onConflict: 'room_id,scroll_name' });
-                    if(error) console.error("Update failed:", error.message);
+                    if(error) logError(error.message);
                 };
             });
         }
 
         function apply(name, effect) {
-            selections[name] = effect;
             const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
             if (sel) {
                 sel.value = effect;
-                sel.classList.toggle('identified', effect !== "???");
-                updateEx();
+                sel.style.borderColor = (effect !== "???") ? "#4CAF50" : "#8c6a31";
             }
         }
 
-        function updateEx() {
-            const used = Object.values(selections).filter(v => v !== "???" && v !== "Letter" && v !== "Blank");
-            let disc = 0;
-            NAMES.forEach(name => {
-                const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
-                if(!sel) return;
-                if(sel.value !== "???") disc++;
-                Array.from(sel.options).forEach(opt => {
-                    const isDup = used.includes(opt.value) && sel.value !== opt.value;
-                    opt.disabled = isDup;
-                    opt.style.opacity = isDup ? "0.3" : "1";
-                });
-            });
-            document.getElementById('counter').innerText = `Discovered: ${disc} / 24`;
-        }
-
-        // Realtime Subscription
-        client.channel('table-db-changes')
-            .on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, p => {
-                if (p.new && p.new.room_id === roomId) apply(p.new.scroll_name, p.new.effect);
-                if (p.eventType === 'DELETE') location.reload();
-            })
-            .on('postgres_changes', { event: '*', schema: 'public', table: 'players' }, () => refresh())
-            .subscribe(s => {
-                if(s === 'SUBSCRIBED') {
-                    document.getElementById('syncDot').classList.add('online');
-                    load();
-                }
-            });
-
-        async function refresh() {
-            const { data, error } = await client.from('players').select('*').eq('room_id', roomId);
-            if(error) { console.error("Refresh error:", error.message); return; }
-            const list = document.getElementById('playerList');
-            list.innerHTML = "In Dungeon: ";
-            const now = new Date();
-            data.filter(p => (now - new Date(p.last_seen)) < 15000).forEach(p => {
-                list.innerHTML += `<span class="player-tag">${p.name}</span> `;
-            });
-        }
-
         async function load() {
-            const { data } = await client.from('scrolls').select('*').eq('room_id', roomId);
+            const { data, error } = await client.from('scrolls').select('*').eq('room_id', roomId);
+            if(error) { logError(error.message); return; }
             if (data) data.forEach(r => apply(r.scroll_name, r.effect));
-            refresh();
         }
+
+        // Realtime connection
+        client.channel('any').on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, p => {
+            if (p.new && p.new.room_id === roomId) apply(p.new.scroll_name, p.new.effect);
+        }).subscribe(s => {
+            if(s === 'SUBSCRIBED') document.getElementById('syncDot').classList.add('online');
+        });
 
         setInterval(async () => {
             if(charName) {
                 const { error } = await client.from('players').upsert({ room_id: roomId, name: charName, last_seen: new Date().toISOString() }, { onConflict: 'room_id,name' });
-                if(!document.getElementById('syncDot').classList.contains('online')) refresh();
+                if(error && error.message.includes("401")) logError("Session Expired or API Key Blocked");
             }
         }, 5000);
 
-        async function resetRun() { 
-            if(confirm("Reset all?")) {
-                await client.from('scrolls').delete().eq('room_id', roomId);
-                location.reload();
-            }
-        }
-
         init();
+        load();
     </script>
 </body>
 </html>
