--- a/index.html
+++ b/index.html
@@ -3,51 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barony Tracker - Emergency Fix</title>
+    <title>Barony Tracker - Exclusion Mode</title>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
         :root { --bg: #0f0a07; --panel: #261a12; --gold: #8c6a31; --text: #e0d0b8; --highlight: #f2c05e; --danger: #8a1313; }
         body { background: var(--bg); color: var(--text); font-family: 'VT323', monospace; padding: 15px; display: flex; justify-content: center; margin: 0; }
         .container { width: 100%; max-width: 900px; border: 4px solid var(--gold); background: var(--panel); box-shadow: 0 0 20px #000; }
-        header { padding: 15px; border-bottom: 2px solid var(--gold); }
+        header { padding: 15px; border-bottom: 2px solid var(--gold); background: #1a120b; }
         .scroll-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); background: #000; }
         .item { display: flex; justify-content: space-between; align-items: center; padding: 10px; border: 1px solid #33241a; }
-        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.1rem; width: 150px; }
-        .status-dot { height: 12px; width: 12px; border-radius: 50%; display: inline-block; background: #555; }
-        .online { background: #4CAF50; box-shadow: 0 0 8px #4CAF50; }
-        #error-msg { background: var(--danger); color: white; padding: 10px; display: none; text-align: center; }
-        #nameOverlay { position: fixed; inset: 0; background: rgba(0,0,0,0.9); z-index: 99; display: none; flex-direction: column; justify-content: center; align-items: center; }
+        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.1rem; width: 150px; cursor: pointer; }
+        .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; background: #555; margin-right: 5px; }
+        .online { background: #4CAF50; box-shadow: 0 0 8px #4CAF50; animation: pulse 2s infinite; }
+        @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.5; } 100% { opacity: 1; } }
+        #nameOverlay { position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 100; display: none; flex-direction: column; justify-content: center; align-items: center; }
         #nameOverlay.show { display: flex; }
+        input { background: #000; border: 2px solid var(--gold); color: #fff; font-family: 'VT323'; font-size: 1.5rem; text-align: center; padding: 8px; }
+        button { background: #3d2b1f; color: #fff; border: 2px solid var(--gold); cursor: pointer; font-family: 'VT323'; padding: 5px 15px; }
     </style>
 </head>
 <body>
     <div id="nameOverlay">
-        <h2 style="color:var(--gold)">ENTER CHARACTER NAME</h2>
-        <input type="text" id="nIn" style="background:#000; border:2px solid var(--gold); color:#fff; font-family:'VT323'; font-size: 1.5rem; text-align: center;">
-        <button onclick="saveName()" style="margin-top:10px; padding: 5px 20px; font-family:'VT323'; cursor:pointer;">ENTER</button>
+        <h2 style="color:var(--gold)">IDENTIFY YOURSELF</h2>
+        <input type="text" id="nIn" maxlength="15" placeholder="Adventurer Name">
+        <button onclick="saveName()" style="margin-top:20px; font-size: 1.2rem;">ENTER DUNGEON</button>
     </div>
 
     <div class="container">
-        <div id="error-msg"></div>
         <header>
-            <h1 style="margin:0">📜 BARONY SCROLLS</h1>
-            <div id="playerList" style="color:#8a7a6a">In Dungeon: ...</div>
+            <div style="display:flex; justify-content:space-between; align-items: center;">
+                <h1 style="margin:0">📜 BARONY SCROLLS</h1>
+                <div id="counter" style="color: #4CAF50; font-size: 1.4rem;">Discovered: 0 / 24</div>
+            </div>
+            <div id="playerList" style="color:#8a7a6a; margin-top:5px; font-size: 1.2rem;">In Dungeon: ...</div>
         </header>
+        
         <div id="grid" class="scroll-grid"></div>
-        <footer style="padding:15px; background:#1a120b; display:flex; justify-content:space-between; align-items:center;">
-            <div><span id="syncDot" class="status-dot"></span> <span id="roomLabel"></span></div>
-            <button onclick="localStorage.removeItem('barony_user'); location.reload();">Reset Identity</button>
+
+        <footer style="padding:15px; background:#1a120b; border-top: 2px solid var(--gold); display:flex; justify-content:space-between; align-items:center; flex-wrap: wrap; gap: 10px;">
+            <div><span id="syncDot" class="status-dot"></span> <span id="roomLabel" style="color:#8a7a6a"></span></div>
+            <div style="display:flex; gap: 10px;">
+                <button onclick="localStorage.removeItem('barony_user'); location.reload();">Change Name</button>
+                <button onclick="resetRoom()" style="border-color: var(--danger); color: #ff6666;">Reset Run</button>
+            </div>
         </footer>
     </div>
 
     <script>
         const SUB_URL = "https://pvbeaaatyaunnlzybgsu.supabase.co"; 
-        const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5senliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY"; 
-
+        const SUB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InB2YmVhYWF0eWF1bm5lenliZ3N1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA4NDM1NDQsImV4cCI6MjA4NjQxOTU0NH0.7YZAuLHZnv8Zm6d-2lmf8oHmQ7Ebw5dznF8ZwqdIDOY"; 
         const client = supabase.createClient(SUB_URL, SUB_KEY);
+
         const NAMES = ["Zelgo Mer", "Juyed Awk Yacc", "NR 9", "Nobary Robyan", "Pratyavayah", "Daiyen Fooels", "Lep Gex Ven Zea", "Prirutsenie", "Elbib Yloh", "Verr Yed Horre", "Venzar Borgavve", "Tharr", "Yum Yum", "Kernod Wel", "Elam Ebow", "Duam Xnaht", "Andova Begarin", "Kirje", "Hackem Muche", "Velox Neb", "Foobie Bletch", "Temov", "Garven Deh", "Read Me"];
-        const EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
+        const ALL_EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
 
         const urlParams = new URLSearchParams(window.location.search);
         let roomId = urlParams.get('room') || Math.random().toString(36).substring(2, 8);
@@ -62,13 +71,7 @@
             if(val) { localStorage.setItem('barony_user', val); location.reload(); }
         }
 
-        function showErr(msg) {
-            const el = document.getElementById('error-msg');
-            el.style.display = 'block';
-            el.innerText = "Connection Error: " + msg;
-        }
-
-        function init() {
+        function initGrid() {
             const grid = document.getElementById('grid');
             NAMES.forEach(name => {
                 const div = document.createElement('div');
@@ -76,49 +79,88 @@
                 div.innerHTML = `<span>${name}</span><select id="s-${name.replace(/\s+/g,'')}"></select>`;
                 grid.appendChild(div);
                 const sel = div.querySelector('select');
-                EFFECTS.forEach(e => {
-                    const opt = document.createElement('option');
-                    opt.value = opt.text = e;
-                    sel.appendChild(opt);
-                });
                 sel.onchange = async () => {
-                    const { error } = await client.from('scrolls').upsert({ room_id: roomId, scroll_name: name, effect: sel.value }, { onConflict: 'room_id,scroll_name' });
-                    if(error) showErr(error.message);
+                    await client.from('scrolls').upsert(
+                        { room_id: roomId, scroll_name: name, effect: sel.value },
+                        { onConflict: 'room_id,scroll_name' }
+                    );
                 };
             });
         }
 
-        async function sync() {
-            const { data, error } = await client.from('scrolls').select('*').eq('room_id', roomId);
-            if(error) { showErr(error.message); return; }
-            data.forEach(r => {
-                const sel = document.getElementById(`s-${r.scroll_name.replace(/\s+/g,'')}`);
-                if(sel) {
-                    sel.value = r.effect;
-                    sel.style.borderColor = (r.effect !== "???") ? "#4CAF50" : "#8c6a31";
-                }
+        async function syncData() {
+            const { data } = await client.from('scrolls').select('*').eq('room_id', roomId);
+            const currentChoices = {};
+            let discCount = 0;
+
+            if (data) {
+                data.forEach(r => {
+                    currentChoices[r.scroll_name] = r.effect;
+                    if (r.effect !== "???") discCount++;
+                });
+            }
+
+            // Get list of effects already taken (excluding ???, Blank, and Letter as they can repeat)
+            const taken = Object.values(currentChoices).filter(v => v !== "???" && v !== "Blank" && v !== "Letter");
+
+            NAMES.forEach(name => {
+                const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
+                if (!sel) return;
+
+                const currentVal = currentChoices[name] || "???";
+                
+                // Rebuild the options list
+                sel.innerHTML = '';
+                ALL_EFFECTS.forEach(eff => {
+                    // Show if: it's ???, it's Blank/Letter, it's the current selection, OR it's not taken yet
+                    if (eff === "???" || eff === "Blank" || eff === "Letter" || eff === currentVal || !taken.includes(eff)) {
+                        const opt = document.createElement('option');
+                        opt.value = opt.text = eff;
+                        sel.appendChild(opt);
+                    }
+                });
+
+                sel.value = currentVal;
+                sel.style.borderColor = (currentVal !== "???") ? "#4CAF50" : "var(--gold)";
             });
+
+            document.getElementById('counter').innerText = `Discovered: ${discCount} / 24`;
         }
 
-        client.channel('global').on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, p => {
-            if(p.new && p.new.room_id === roomId) sync();
-        }).subscribe(s => {
-            if(s === 'SUBSCRIBED') document.getElementById('syncDot').classList.add('online');
-        });
+        async function updatePlayers() {
+            const { data } = await client.from('players').select('*').eq('room_id', roomId);
+            if(data) {
+                const active = data.filter(p => (new Date() - new Date(p.last_seen)) < 15000).map(p => p.name);
+                document.getElementById('playerList').innerText = "In Dungeon: " + active.join(", ");
+            }
+        }
+
+        async function resetRoom() {
+            if(confirm("Wipe all identified scrolls for this room?")) {
+                await client.from('scrolls').delete().eq('room_id', roomId);
+                syncData();
+            }
+        }
+
+        client.channel('room-sync')
+            .on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, () => syncData())
+            .on('postgres_changes', { event: '*', schema: 'public', table: 'players' }, () => updatePlayers())
+            .subscribe(status => {
+                if(status === 'SUBSCRIBED') document.getElementById('syncDot').classList.add('online');
+            });
 
         setInterval(async () => {
             if(charName) {
-                await client.from('players').upsert({ room_id: roomId, name: charName, last_seen: new Date().toISOString() }, { onConflict: 'room_id,name' });
-                const { data } = await client.from('players').select('*').eq('room_id', roomId);
-                if(data) {
-                    const list = data.filter(p => (new Date() - new Date(p.last_seen)) < 15000).map(p => p.name);
-                    document.getElementById('playerList').innerText = "In Dungeon: " + list.join(", ");
-                }
+                await client.from('players').upsert(
+                    { room_id: roomId, name: charName, last_seen: new Date().toISOString() },
+                    { onConflict: 'room_id,name' }
+                );
+                updatePlayers();
             }
         }, 5000);
 
-        init();
-        sync();
+        initGrid();
+        syncData();
     </script>
 </body>
 </html>
