--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barony Tracker - Fixed Upsert</title>
+    <title>Barony Tracker - Final Sync</title>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@@ -13,21 +13,20 @@
         header { padding: 15px; border-bottom: 2px solid var(--gold); background: #1a120b; }
         .scroll-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); background: #000; }
         .item { display: flex; justify-content: space-between; align-items: center; padding: 10px; border: 1px solid #33241a; }
-        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.1rem; width: 150px; }
+        select { background: #000; color: var(--highlight); border: 2px solid var(--gold); font-family: 'VT323'; font-size: 1.1rem; width: 150px; outline:none; }
         .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; background: #555; }
         .online { background: #4CAF50; box-shadow: 0 0 8px #4CAF50; }
-        #error-log { background: #400; color: #f66; padding: 5px; display: none; text-align: center; font-size: 0.8rem; }
+        #error-log { background: var(--danger); color: #fff; padding: 5px; display: none; text-align: center; }
         #nameOverlay { position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 100; display: none; flex-direction: column; justify-content: center; align-items: center; }
         #nameOverlay.show { display: flex; }
-        input { background: #000; border: 2px solid var(--gold); color: #fff; font-family: 'VT323'; font-size: 1.5rem; text-align: center; padding: 8px; }
         button { background: #3d2b1f; color: #fff; border: 2px solid var(--gold); cursor: pointer; font-family: 'VT323'; padding: 5px 15px; }
     </style>
 </head>
 <body>
     <div id="nameOverlay">
-        <h2 style="color:var(--gold)">IDENTIFY YOURSELF</h2>
-        <input type="text" id="nIn" maxlength="15" placeholder="Adventurer Name">
-        <button onclick="saveName()" style="margin-top:20px; font-size: 1.2rem;">ENTER DUNGEON</button>
+        <h2 style="color:var(--gold)">WHO ART THOU?</h2>
+        <input type="text" id="nIn" style="background:#000; color:#fff; border:2px solid var(--gold); font-family:'VT323'; font-size: 1.5rem; text-align: center;">
+        <button onclick="saveName()" style="margin-top:20px;">ENTER DUNGEON</button>
     </div>
 
     <div class="container">
@@ -35,19 +34,14 @@
         <header>
             <div style="display:flex; justify-content:space-between; align-items: center;">
                 <h1 style="margin:0">📜 BARONY SCROLLS</h1>
-                <div id="counter" style="color: #4CAF50; font-size: 1.4rem;">Discovered: 0 / 24</div>
+                <div id="counter" style="color: #4CAF50; font-size: 1.4rem;">0 / 24</div>
             </div>
-            <div id="playerList" style="color:#8a7a6a; margin-top:5px; font-size: 1.2rem;">In Dungeon: ...</div>
+            <div id="playerList" style="color:#8a7a6a; margin-top:5px;">In Dungeon: ...</div>
         </header>
-        
         <div id="grid" class="scroll-grid"></div>
-
         <footer style="padding:15px; background:#1a120b; border-top: 2px solid var(--gold); display:flex; justify-content:space-between; align-items:center;">
             <div><span id="syncDot" class="status-dot"></span> <span id="roomLabel" style="color:#8a7a6a"></span></div>
-            <div style="display:flex; gap: 10px;">
-                <button onclick="localStorage.removeItem('barony_user'); location.reload();">New Name</button>
-                <button onclick="resetRoom()" style="border-color: var(--danger); color: #ff6666;">Reset All</button>
-            </div>
+            <button onclick="resetRoom()" style="color: #ff6666; border-color: #800;">Reset Run</button>
         </footer>
     </div>
 
@@ -57,7 +51,7 @@
         const client = supabase.createClient(SUB_URL, SUB_KEY);
 
         const NAMES = ["Zelgo Mer", "Juyed Awk Yacc", "NR 9", "Nobary Robyan", "Pratyavayah", "Daiyen Fooels", "Lep Gex Ven Zea", "Prirutsenie", "Elbib Yloh", "Verr Yed Horre", "Venzar Borgavve", "Tharr", "Yum Yum", "Kernod Wel", "Elam Ebow", "Duam Xnaht", "Andova Begarin", "Kirje", "Hackem Muche", "Velox Neb", "Foobie Bletch", "Temov", "Garven Deh", "Read Me"];
-        const ALL_EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
+        const EFFECTS = ["???", "Blank", "Fire", "Remove Curse", "Light", "Identify", "Repair", "Destroy Armor", "Magic Mapping", "Charging", "Conjure Arrow", "Food", "Teleportation", "Summon", "Enchant Weapon", "Enchant Armor", "Letter"];
 
         const urlParams = new URLSearchParams(window.location.search);
         let roomId = urlParams.get('room') || Math.random().toString(36).substring(2, 8);
@@ -82,80 +76,57 @@
             });
         }
 
-        async function updateScroll(name, effect) {
-            // Explicit upsert with column mapping
-            const { error } = await client.from('scrolls').upsert(
-                { room_id: roomId, scroll_name: name, effect: effect },
-                { onConflict: 'room_id,scroll_name' }
-            );
-            if(error) {
-                const log = document.getElementById('error-log');
-                log.style.display = 'block';
-                log.innerText = "Sync Error: " + error.message;
-            } else {
-                document.getElementById('error-log').style.display = 'none';
-            }
-        }
-
         async function syncData() {
-            const { data } = await client.from('scrolls').select('*').eq('room_id', roomId);
-            const currentChoices = {};
-            let discCount = 0;
+            const { data, error } = await client.from('scrolls').select('*').eq('room_id', roomId);
+            if(error) return;
 
-            if (data) {
-                data.forEach(r => {
-                    currentChoices[r.scroll_name] = r.effect;
-                    if (r.effect !== "???") discCount++;
-                });
-            }
+            const current = {};
+            let count = 0;
+            data.forEach(r => { current[r.scroll_name] = r.effect; if(r.effect !== "???") count++; });
 
-            const taken = Object.values(currentChoices).filter(v => v !== "???" && v !== "Letter");
+            const taken = Object.values(current).filter(v => v !== "???" && v !== "Letter");
 
             NAMES.forEach(name => {
                 const sel = document.getElementById(`s-${name.replace(/\s+/g,'')}`);
-                if (!sel) return;
-
-                const currentVal = currentChoices[name] || "???";
+                const val = current[name] || "???";
                 sel.innerHTML = '';
-                
-                ALL_EFFECTS.forEach(eff => {
-                    if (eff === "???" || eff === "Letter" || eff === currentVal || !taken.includes(eff)) {
+                EFFECTS.forEach(e => {
+                    if(e === "???" || e === "Letter" || e === val || !taken.includes(e)) {
                         const opt = document.createElement('option');
-                        opt.value = opt.text = eff;
+                        opt.value = opt.text = e;
                         sel.appendChild(opt);
                     }
                 });
-
-                sel.value = currentVal;
-                sel.style.borderColor = (currentVal !== "???") ? "#4CAF50" : "var(--gold)";
-                // Update change listener
-                sel.onchange = () => updateScroll(name, sel.value);
+                sel.value = val;
+                sel.style.borderColor = (val !== "???") ? "#4CAF50" : "var(--gold)";
+                sel.onchange = async () => {
+                    const { error } = await client.from('scrolls').upsert({ room_id: roomId, scroll_name: name, effect: sel.value });
+                    if(error) { document.getElementById('error-log').innerText = error.message; document.getElementById('error-log').style.display = 'block'; }
+                };
             });
-
-            document.getElementById('counter').innerText = `Discovered: ${discCount} / 24`;
+            document.getElementById('counter').innerText = `Discovered: ${count} / 24`;
         }
 
         async function updatePlayers() {
             const { data } = await client.from('players').select('*').eq('room_id', roomId);
             if(data) {
-                const active = data.filter(p => (new Date() - new Date(p.last_seen)) < 15000).map(p => p.name);
+                const now = new Date();
+                const active = data.filter(p => (now - new Date(p.last_seen)) < 15000).map(p => p.name);
                 document.getElementById('playerList').innerText = "In Dungeon: " + active.join(", ");
             }
         }
 
         async function resetRoom() {
-            if(confirm("Wipe all data for this room?")) {
-                await client.from('scrolls').delete().eq('room_id', roomId);
-                syncData();
-            }
+            if(confirm("Wipe room?")) { await client.from('scrolls').delete().eq('room_id', roomId); syncData(); }
         }
 
-        client.channel('any').on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, () => syncData())
+        client.channel('realtime').on('postgres_changes', { event: '*', schema: 'public', table: 'scrolls' }, () => syncData())
+            .on('postgres_changes', { event: '*', schema: 'public', table: 'players' }, () => updatePlayers())
             .subscribe(s => { if(s === 'SUBSCRIBED') document.getElementById('syncDot').classList.add('online'); });
 
         setInterval(async () => {
             if(charName) {
-                await client.from('players').upsert({ room_id: roomId, name: charName, last_seen: new Date().toISOString() }, { onConflict: 'room_id,name' });
+                await client.from('players').upsert({ room_id: roomId, name: charName, last_seen: new Date().toISOString() });
                 updatePlayers();
             }
         }, 5000);
